--- a/style.css
+++ b/style.css
@@ -1,3 +1,62 @@
+* {
+    margin: 0;
+    padding: 0;
+    background-color: #ffffff(243, 235, 144);
+    font-family:Arial, Helvetica, sans-serif;
+}
+
 .all {
+    margin: 0px;
+    padding: 0px;
     
 }
+
+h1 {
+    text-align: center;
+    color: #050444;
+    font-size: 4em;
+    padding: 20px;
+    font-family:Arial, Helvetica, sans-serif;
+    
+}
+
+.nav_bar {
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.nav_bar a {
+    display: inline;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 5px 20px;
+    color: #000000;
+}
+.nav_bar a:link {
+    color: #000000;
+}
+
+.nav_bar a:hover {
+    background-color: #050444;
+    color: #ffffff;
+    border-radius: 6px;
+}
+
+#home {
+    width: 900px;
+    margin: auto;
+}
+
+#home h2 {
+    color: #050444;
+    text-align: center;
+    padding: 20px;
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+#home p {
+    text-align: center;
+    
+
+}
+
