--- a/style.css
+++ b/style.css
@@ -6,22 +6,27 @@
 }
 
 .all {
-    margin: 0px;
+    margin: auto;
     padding: 0px;
+    width: 80%;
     
 }
 
 h1 {
-    text-align: center;
+    text-align: left;
     color: #050444;
-    font-size: 4em;
-    padding: 20px;
+    font-size: 3em;
+    padding: 0;
+    margin: 0;
     font-family:Arial, Helvetica, sans-serif;
+    display: block;
     
 }
 
 .nav_bar {
-    padding-bottom: 20px;
+    float: right;
+    margin-top: 44px;
+    
     text-align: center;
 }
 
@@ -30,10 +35,10 @@ h1 {
     text-decoration: none;
     font-size: 18px;
     padding: 5px 20px;
-    color: #000000;
+    color: #000000c4;
 }
 .nav_bar a:link {
-    color: #000000;
+    color: #000000c4;
 }
 
 .nav_bar a:hover {
@@ -43,11 +48,12 @@ h1 {
 }
 
 #home {
-    width: 900px;
+    width: 100%;
     margin: auto;
 }
 
 #home h2 {
+    color: #000000c4;
     color: #050444;
     text-align: center;
     padding: 20px;
@@ -55,8 +61,29 @@ h1 {
 }
 
 #home p {
+    color: #000000c4;
     text-align: center;
     
 
+}
+
+/** Arts.html **/
+
+.art_image img {
+    padding: 12px 12px 12px 0;
+    width: 30%;
+    float: left;
+}
+
+.art_text {
+    width: 100%;
+}
+
+.art_text h2 {
+    
+}
+
+.art_text p {
+    margin-top: 110px;
 }
 
