--- a/style.css
+++ b/style.css
@@ -69,21 +69,29 @@ h1 {
 
 /** Arts.html **/
 
-.art_image img {
-    padding: 12px 12px 12px 0;
-    width: 30%;
-    float: left;
-}
-
-.art_text {
+.art_image {
+    margin-top: 10px;
     width: 100%;
-}
-
-.art_text h2 {
     
 }
 
-.art_text p {
-    margin-top: 110px;
+.art_image img {
+    border-radius: 8px;
+    width: 30%;
+    float: left;
+    border: 2px solid #050444;
+
 }
+
+.art_image h2 {
+    margin-top: 95px;
+}
+
+.art_image h2, p {
+    padding: 5px;
+    width: 50%;
+    float: left;
+    margin-left: 10px;
+}
+
 
