--- a/style/style.css
+++ b/style/style.css
@@ -35,7 +35,7 @@ body {
     
 }
 
-.nav-top li#img-logo {
+.nav-top #navbar #img-logo {
     margin: 15px 30px 15px 30px ;
     width: 135px;
     height: 135px;
